[package]
name = "rtable"
version = "0.1.0"
edition = "2021"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
wasm-bindgen = "0.2.90"
console_error_panic_hook = { version = "0.1.1", optional = true }
cfg-if = "1.0.0"
